--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,16 @@
 <!doctype html>
 
 <head>
+   <link src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js">
   <title> Kids Are Weird </title>
 </head>
 <body>
   <div id="image">
   </div>
+   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+     <script>
+       var x = document.createElement("img");
+       x.setAttribute("src","https://s3.amazonaws.com/learn-verified/painting-with-dog.gif")
+      $("#image").prepend(x);
+     </script>
 </body>
