--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,13 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
-  <div id="image">
+    hey
+  <div id="image" style="width:80%; height: 300px; background-color: aquamarine;">
   </div>
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+    
+    <script type="text/javascript">
+    $("#image").append('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />');
+    </script>
 </body>
