--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,11 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
+  
   <div id="image">
   </div>
+  <script>'https://code.jquery.com/jquery-3.3.1.js'</script>
+<script>
+  $('#image').innerHTML='hellow'
+</script>
 </body>
