--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,10 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
+  <script>
+    $("#image").append("https://s3.amazonaws.com/learn-verified/painting-with-dog.gif");
+  </script>
   <div id="image">
   </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 </body>
